--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+Flask==1.1.2
+hvac==0.10.1
 PyYAML==5.3.1
 oic==1.2.0
 jsonpath-rw==1.4.0
-pydantic==1.8.1
-pylon @ git+https://github.com/carrier-io/pylon.git@main
+redis==3.4.1
+flask-session==0.3.1
